...

export function BackTitleHeader({
  title,
  onBack,
  style,
  backAccessibilityLabel,
  backButtonTestID = "back-title-header-back",
  trailingAction,
  titleSize = "h1",
}: BackTitleHeaderProps) {
  const { t } = useTranslation();
  const theme = useTheme();
  const styles = useMemo(() => makeStyles(theme), [theme]);
...
